--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,10 @@ section {
 .navbar-title {
   text-align: center;
 }
-.navbar-title h1 {
+.navbar-title a {
+  font-size: 35px;
+  outline: none;
+  text-decoration: none;
   color: white;
 }
 .navbar-nav a {
